cmake_minimum_required(VERSION 3.20.0)

set(CMAKE_CONFIGURATION_TYPES Debug;Release)
set(CMAKE_GENERATOR_PLATFORM x64)

project(muchawon VERSION 0.1 LANGUAGES CXX)

set(MUCHAWON_DIR ${CMAKE_SOURCE_DIR}/muchawon)
file(GLOB SRC_MUCHAWON ${MUCHAWON_DIR}/*.cpp)
file(GLOB HEADER_MUCHAWON ${MUCHAWON_DIR}/*.h)

set(MUCHAWON_TEST_DIR ${CMAKE_SOURCE_DIR}/tests)
file(GLOB SRC_MUCHAWON_TEST ${MUCHAWON_TEST_DIR}/*.cpp)

set(INCLUDE_DIR ${MUCHAWON_DIR})
set(SRC_FILES_MUCAHWON ${SRC_MUCHAWON} ${SRC_MUCHAWON_TEST})
set(HEADER_FILES_MUCHAWON ${HEADER_MUCHAWON})

set(NAME_TEST_MUCHAWON muchawonTest)

add_executable(${NAME_TEST_MUCHAWON} ${SRC_FILES_MUCAHWON} ${HEADER_FILES_MUCHAWON})
target_include_directories(${NAME_TEST_MUCHAWON} PUBLIC ${INCLUDE_DIR})
set_target_properties(${NAME_TEST_MUCHAWON} PROPERTIES CXX_STANDARD 20 )
target_compile_options(${NAME_TEST_MUCHAWON} PUBLIC -D_UNICODE -DUNICODE)